tdf#40244 tdf#160192: create tempFile elsewhere if LogicBase is RO

This avoids a crash/infinite loop in specific read-only folder
situation (where the lock file already exists).

It also fixes ODF files giving three misleading/unclear
notices when attempting to save into a read-only folder.

When LO saves a file, it saves to a temporary file
and then moves that file overtop of the previous one, IIUC.

Prior to 6.1 5259ab8104cfba60c40748ed0cd59d93df038c5b
that temporary file was stored in the /tmp directory (IIUC),
but was changed to be in the same folder for easier renaming,
same filesystem etc.

Note that typically this situation would fail
since a locking file also could not be created.
However in the case where the lock file already exists,
then all the pieces are in place to actually modify the document.

By falling back to the /tmp folder if the document's folder
is read-only, we can still modify a writeable document.

Change-Id: Ie027fc05934f2c071f7a91007255801c179bff49
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164841
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>